--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Parallax Scrolling Website</title>
+        <title>Moonlight</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
